   root paths in error messages.
   
 o GenericDataFile and GenericDataFileSet no longer report on memory (RAM)
   usage of objects.

CLEANUP:

 o dsApply(..., .parallel="future") now used future_lapply() of the future
   package internally.

INSTALLATION:

 o Package no longer needs to depend on listenv.
   
DEPRECATED AND DEFUNCT:

 o Argument 'files' of extractMatrix() for GenericTabularFileSet is defunct.
 
 o dsApply() with either .parallel = "BiocParallel::BatchJobs"
   or "BatchJobs" is deprecated.  Instead, use future::future_lapply()
   with whatever choice of future::plan() preferred.
 
 
Version: 2.10.0 [2016-01-04]

SIGNIFICANT CHANGES:
   
 o Package requires R (>= 3.1.2) released October 2014, because
   of its dependency on the listenv package.

NEW FEATURES:

 o Now file sizes are reported using IEC binary prefixes, i.e.
   bytes, KiB, MiB, GiB, TiB, ..., YiB.
   
 o Added hasChecksumFile() for GenericDataFile.
 
 o hasBeenModified() for GenericDataFile gained argument 'update'.

CLEANUP:

 o Removed na.omit() for GenericDataFileSet; the default one in the stats
   package works equally well.
   
SOFTWARE QUALITY:

 o Increased test coverage from 51% to 62%.

BUG FIXES:

 o Arguments$getTags() failed to drop missing values.
 
 o equals(df, other) for GenericDataFile would give an error if 'other' was
   not a GenericDataFile.
   
 o dropTags() would drop name if a tag had the same name.
 
 o getOneFile() on a GenericDataFileSet with a single missing file would
   give an error, now it gives a file with an NA pathname.

DEPRECATED AND DEFUNCT:

 o Preparing to make the default pathname for GenericDataFile() to
   become NA_character_.  It is currently NULL, but the goal is to
   enforce length(pathname) to be one.
   
 o extractMatrix(ds, files, ...) for GenericTabularFileSet is deprecated.
   Use extractMatrix(ds[files], ...) instead.
   
 
Version: 2.9.0 [2015-10-20]

SIGNIFICANT CHANGES:
