@@ -537,11 +537,9 @@ setMethodS3("getReadArguments", "TabularTextFile", function(this, fileHeader=NUL
   verbose && cat(verbose, "User arguments:");
   verbose && str(verbose, userArgs);
 
-  # Backward compatibility
-  if (is.element("colClassPatterns", names(userArgs))) {
-    .Deprecated(msg="Argument 'colClassPatterns' has been renamed to 'colClasses'. Please update your code accordingly.");
-    colClasses <- userArgs[["colClassPatterns"]];
-    userArgs[["colClassPatterns"]] <- NULL;
+  # DEFUNCT
+  if ("colClassPatterns" %in% names(userArgs)) {
+    .Defunct(msg = "Argument 'colClassPatterns' has been renamed to 'colClasses'. Please update your code accordingly.")
   }
 
 
